--- a/website/docs/community/merge/overview.mdx
+++ b/website/docs/community/merge/overview.mdx
@@ -13,7 +13,7 @@ import Link from '@docusaurus/Link'
 
 - **动态类名更安全**：在组件里根据状态拼接类名时，`twMerge` 会自动剔除冲突项，确保最终样式一致。
 - **小程序专属转义**：运行时会把诸如 `[#ececec]`、`[length:24rpx]` 等非法字符转成小程序可识别的占位符，并在编译期再还原。
-- **自动匹配 Tailwind CSS 主版本**：包内同时内置 `tailwind-merge@2`（对应 `tailwindcss@3`）与 `tailwind-merge@3`（对应 `tailwindcss@4`），安装时会根据项目里的 `tailwindcss` 版本自动切换入口。
+- **覆盖多个 Tailwind CSS 主版本**：`@weapp-tailwindcss/merge` 针对 `tailwindcss@4`（基于 `tailwind-merge@3`），而 `@weapp-tailwindcss/merge-v3` 保持对 `tailwindcss@3` 的长期支持，两者 API 完全一致。
 - **保留原生 API**：`twMerge`、`twJoin`、`extendTailwindMerge`、`createTailwindMerge` 等函数与原版完全一致，迁移成本低。
 
 :::info 与原库的差异
@@ -31,19 +31,11 @@ import Link from '@docusaurus/Link'
 npm i @weapp-tailwindcss/merge
 ```
 
-安装脚本会尝试解析项目根目录里 `tailwindcss` 的版本，并把 `dist/index.*` 指向对应的运行时：
+> 适用于 `tailwindcss@4` 的项目。若你仍在维护 `tailwindcss@3`，请改为安装 `@weapp-tailwindcss/merge-v3`：
 
-- `tailwindcss@^4` ➜ 使用 `@weapp-tailwindcss/merge/v4`（基于 `tailwind-merge@3`）
-- 其他情况 ➜ 使用 `@weapp-tailwindcss/merge/v3`（基于 `tailwind-merge@2`）
-
-若检测失败，会回退到 `v4` 版本并打印提示。你也可以通过环境变量显式控制：
-
-| 环境变量 | 作用 |
-| --- | --- |
-| `WEAPP_TW_MERGE_TARGET_VERSION` / `WEAPP_TW_MERGE_FORCE_VERSION` | 强制运行时版本（支持 `3`/`v3`/`4`/`v4`） |
-| `WEAPP_TW_MERGE_DISABLE_FALLBACK` / `WEAPP_TW_MERGE_NO_FALLBACK` | 检测失败时不要覆盖入口，手动按需引入 `v3`/`v4` |
-| `WEAPP_TW_MERGE_STRICT` | 切换失败时让脚本返回非零退出码 |
-| `WEAPP_TW_MERGE_RESOLVE_ROOT` | 指定解析 `tailwindcss` 的额外搜索目录 |
+```bash npm2yarn
+npm i @weapp-tailwindcss/merge-v3
+```
 
 ## 快速上手
 
@@ -75,10 +67,10 @@ const buttonClass = twMerge(
 
 ### tailwind-variants 快速体验
 
-`@weapp-tailwindcss/merge` 也封装了 [`tailwind-variants`](https://tailwind-variants.org/)，在小程序环境中同样可以使用 `tv`/`cn` 输出带转义的类名：
+`@weapp-tailwindcss/variants` 提供了 [`tailwind-variants`](https://tailwind-variants.org/) 的运行时封装，在小程序环境中同样可以使用 `tv`/`cn` 输出带转义的类名：
 
 ```ts
-import { tv } from '@weapp-tailwindcss/merge/variants'
+import { tv } from '@weapp-tailwindcss/variants'
 
 const badge = tv({
   base: 'inline-flex items-center rounded-full px-2 text-xs font-semibold',
