--- a/website/docs/community/merge/runtime-api.mdx
+++ b/website/docs/community/merge/runtime-api.mdx
@@ -20,7 +20,7 @@ import {
 } from '@weapp-tailwindcss/merge'
 ```
 
-> 如果你明确知道项目使用的 `tailwindcss` 主版本，也可以直接从 `@weapp-tailwindcss/merge/v3` 或 `@weapp-tailwindcss/merge/v4` 导入，以跳过自动检测。
+> 如果你明确知道项目使用的 `tailwindcss` 主版本，也可以直接使用 `@weapp-tailwindcss/merge-v3`（适配 v3）或 `@weapp-tailwindcss/merge`（适配 v4）。
 
 ## twMerge(...classValues)
 
