--- a/website/docs/community/templates.mdx
+++ b/website/docs/community/templates.mdx
@@ -27,7 +27,7 @@ import TemplateLink from '@site/src/components/TemplateLink'
 <TemplateLink
   title="uni-app-vue2-tailwind-vscode-template"
   href="https://github.com/sonofmagic/uni-app-vue2-tailwind-vscode-template"
-  repoOwner="icebreaker-template"
+  repoOwner="sonofmagic"
   repo="uni-app-vue2-tailwind-vscode-template"
 />
 
@@ -38,25 +38,26 @@ import TemplateLink from '@site/src/components/TemplateLink'
   repo="x-dev-uni"
 />
 
-### 若依移动端 (`hbuilderx` 集成 `tailwindcss`)
+{/* ### 若依移动端 (`hbuilderx` 集成 `tailwindcss`)
 
 <TemplateLink
   hot
   title="若依移动端"
   description="Gitee 地址"
   href="https://gitee.com/sonofmagic/RuoYi-App"
-/>
+/> */}
 
 ### 使用 `hbuilderx` 进行构建和开发
 
 <TemplateLink
   title="uni-app-vue3-tailwind-hbuilder-template"
   href="https://github.com/sonofmagic/uni-app-vue3-tailwind-hbuilder-template"
-  repoOwner="icebreaker-template"
+  repoOwner="sonofmagic"
   repo="uni-app-vue3-tailwind-hbuilder-template"
 />
 
 <TemplateLink
+  deprecated
   title="uni-app-vue2-tailwind-hbuilder-template"
   description="架构太过老旧，只能作为集成参考，新项目请勿使用"
   href="https://github.com/icebreaker-template/uni-app-vue2-tailwind-hbuilder-template"
@@ -74,7 +75,7 @@ import TemplateLink from '@site/src/components/TemplateLink'
   hot
   title="taro-react-tailwind-vscode-template"
   href="https://github.com/sonofmagic/taro-react-tailwind-vscode-template"
-  repoOwner="icebreaker-template"
+  repoOwner="sonofmagic"
   repo="taro-react-tailwind-vscode-template"
 />
 
@@ -95,31 +96,34 @@ import TemplateLink from '@site/src/components/TemplateLink'
   title="vue-mini-tailwindcss-template"
   description="vue-mini 支持"
   href="https://github.com/sonofmagic/vue-mini-tailwindcss-template"
-  repoOwner="icebreaker-template"
+  repoOwner="sonofmagic"
   repo="vue-mini-tailwindcss-template"
 />
 
 #### 下方的技术架构过于老旧，不推荐
 
 <TemplateLink
+  deprecated
   title="native-weapp-tailwindcss-template"
   description="cli 打包"
   href="https://github.com/sonofmagic/native-weapp-tailwindcss-template"
-  repoOwner="icebreaker-template"
+  repoOwner="sonofmagic"
   repo="native-weapp-tailwindcss-template"
 />
 
 <TemplateLink
+  deprecated
   title="weapp-tailwindcss-gulp-template"
   description="gulp 打包"
   href="https://github.com/sonofmagic/weapp-tailwindcss/tree/main/demo/gulp-app"
 />
 
 <TemplateLink
+  deprecated
   title="weapp-native-mina-tailwindcss-template"
   description="webpack 打包"
   href="https://github.com/sonofmagic/weapp-native-mina-tailwindcss-template"
-  repoOwner="icebreaker-template"
+  repoOwner="sonofmagic"
   repo="weapp-native-mina-tailwindcss-template"
 />
 
